brat/test/golden/kernel/copy.brat.golden
Error in test/golden/kernel/copy.brat@FC {start = Pos {line = 2, col = 10}, end = Pos {line = 2, col = 19}}:
copy = { q => q, q }
         ^^^^^^^^^

  Type error: q has already been used

